# eliezer-weekly-roundup

./: .gitignore  .notebooklm-sync.json  README.md  pyproject.toml
AgenticAI/: README.md
AgenticAI/2026-04-05/: reasoning.md
AgenticAI/2026-04-06/: reasoning.md
AgenticAI/2026-04-07/: reasoning.md
AgenticAI/2026-04-08/: reasoning.md
AgenticAI/2026-04-09/: reasoning.md
AgenticAI/2026-04-10/: reasoning.md
AgenticAI/2026-04-11/: reasoning.md
AgenticAI/2026-04-12/: reasoning.md
AgenticAI/2026-04-13/: reasoning.md
AgenticAI/2026-04-14/: reasoning.md
AgenticAI/2026-04-15/: reasoning.md
AgenticAI/2026-04-16/: reasoning.md
AgenticAI/2026-04-17/: reasoning.md
AgenticAI/2026-04-18/: reasoning.md
AgenticAI/2026-04-19/: reasoning.md
AgenticAI/2026-04-20/: reasoning.md
AgenticAI/2026-04-21/: reasoning.md
AgenticAI/2026-04-22/: reasoning.md
AgenticAI/2026-04-23/: reasoning.md
AgenticAI/2026-04-24/: reasoning.md
AgenticAI/2026-04-25/: reasoning.md
AgenticAI/2026-04-26/: reasoning.md
AgenticAI/2026-04-27/: reasoning.md
AgenticAI/2026-04-28/: reasoning.md
Strategy/: README.md
roundups/: 2026-04-05.md  2026-04-06.md  2026-04-07.md  2026-04-08.md  2026-04-09.md  2026-04-10.md  2026-04-11.md  2026-04-12.md  2026-04-13.md  2026-04-14.md  2026-04-15.md  2026-04-16.md  2026-04-17.md  2026-04-18.md  2026-04-19.md  2026-04-20.md  2026-04-21.md  2026-04-22.md  2026-04-23.md  2026-04-24.md  2026-04-25.md  2026-04-26.md  2026-04-27.md  2026-04-28.md  2026-04-29.md
tests/: test_cli_report_podcast.py  test_podcast_hook.py  test_report_podcast_sync.py
(+51 files in other folders)
